# distributed_representative_covariance_matrix

./: CMakeLists.txt  conanfile.txt
src/: find_approximation_set.cpp  preprocess_data.cpp  tests.cpp
src/data_tools/: data_loader.h  data_saver.h  matrix_builder.h  matrix_row.h  tests.h
src/representative_subset_calculator/: representative_subset_calculator.h
src/similarity_matrix/: similarity_matrix.h  tests.h
